--- a/benchmark/Dockerfile
+++ b/benchmark/Dockerfile
@@ -1,6 +1,6 @@
 FROM golang:latest
 
-RUN go get -u github.com/codesenberg/bombardier
+RUN go get -u github.com/rakyll/hey
 
 # out
 ENV OUT_FILE /tmp/results.txt
