--- a/benchmark/Dockerfile
+++ b/benchmark/Dockerfile
@@ -9,4 +9,4 @@ ENV PORT 80
 ADD benchmark.sh /usr/bin/benchmark
 RUN chmod +x /usr/bin/benchmark
 
-CMD "/usr/bin/benchmark"
+ENTRYPOINT ["/usr/bin/benchmark"]
