--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ services:
 env:
   global:
     - PORT=3000
+    - TEST_ROUTE=/repos/OWNER/REPO/hooks/ID
   matrix:
     - APP=http
     - APP=kemal
@@ -14,4 +15,6 @@ install:
   - docker build -t benchmark ./benchmark
   - cd $APP && shards build --release --no-debug
 before_script: ./$APP/bin/$APP &
-script: docker run --env=PORT=$PORT --net=host benchmark localhost
+script:
+  - curl http://localhost:${PORT}${TEST_ROUTE}
+  - docker run --env=PORT=$PORT --net=host benchmark localhost
