--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,7 @@ install:
   - cd $APP && shards build --release --no-debug
 before_script: ./$APP/bin/$APP &
 script:
+  - env
+  - ps -aq
   - curl http://`hostname -i`:${PORT}${TEST_ROUTE}
   - docker run --env=PORT=$PORT --net=host benchmark `hostname -i`
