--- a/orion/shard.yml
+++ b/orion/shard.yml
@@ -4,7 +4,7 @@ version: 0.0.1
 dependencies:
   orion:
     github: obsidian/orion
-    branch: caching-pipelines
+    branch: middleware-chain-no-yield
 
 targets:
   orion:
